# yad

./: .gitignore  AUTHORS  ChangeLog.old  Makefile.am  NEWS  README.md  THANKS  TODO  acinclude.m4  configure.ac  distributions.md  feature-comparison.md  meson.build  meson_options.txt
.github/workflows/: build.yml
data/: Makefile.am  meson.build  pfd.1  yad-icon-browser.desktop.in  yad-settings.desktop.in  yad-tools.1  yad.1  yad.gschema.xml  yad.gschema.xml.in  yad.m4.in  yad.spec.in  zenity.sh
data/icons/: Makefile.am
data/icons/128x128/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/96x96/: Makefile.am
data/misc/: notify-send
debian/: changelog  clean  control  copyright  files  rules  watch
po/: LINGUAS  Makevars  POTFILES.in  de.po  es.po  fr.po  it.po  ka.po  pt_BR.po  ru.po  sk.po  uk.po  zh_TW.po
src/: Makefile.am  about.c  app.c  appindicator.c  browser.c  calendar.c  calendar.xpm  color.c  cpicker.c  cpicker.h  cpicker_gtk2.c  defaults.h  dnd.c  entry.c  file.c  font.c  form.c  html.c  icons.c  list.c  main.c  menu.c  menu.h  meson.build  multi-progress.c  notebook.c  notification.c  option.c  paned.c  pfd  pfd.c  picture.c  popup.c  print.c  progress.c  scale.c  settings.c  stock.h  text.c  tools.c  (+3 more)
